refactored the angular app file structure to use controllers, views, servers, etc

--- a/ez7gen-web/public/css/style.css
+++ b/ez7gen-web/public/css/style.css
@@ -1,9 +1,4 @@
-body { padding-top:50px; }
-
-.btn { margin-bottom:20px; }
-
-pre {
-    overflow: auto;
-    word-wrap: normal;
-    white-space: pre;
+/* cloak */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+    display: none !important;
 }
