added angular-toast, custom messages

--- a/ez7gen-web/public/views/index.html
+++ b/ez7gen-web/public/views/index.html
@@ -61,6 +61,14 @@
 <script src="vendor/js/xeditable.js"></script>
 <link rel="stylesheet" href="vendor/css/xeditable.css">
 
+<!-- toast -->
+<!--<script src="vendor/js/angular-toastr.tpls.min.js"></script>-->
+<!--<script src="vendor/js/angular-toastr.min.js"></script>-->
+<!--<link rel="stylesheet" href="vendor/css/angular-toastr.min.css" />-->
+
+<script src="https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
+<link rel="stylesheet" href="https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
+
 <!-- HTML With Template Container -->
 </head>
 
