--- a/ez7gen-web/public/css/style.css
+++ b/ez7gen-web/public/css/style.css
@@ -2,3 +2,12 @@
 [ng\:cloak], [ng-cloak], .ng-cloak {
     display: none !important;
 }
+
+.ack-area {
+    /*width: 100%;*/
+    /*height: auto;*/
+    white-space:pre;
+    word-break: break-all;/*break-word;*/
+    /*font-family: Menlo,Monaco,Consolas,'Courier New',monospace*/
+}
+
