--- a/ez7gen-web/public/templates/generate.html
+++ b/ez7gen-web/public/templates/generate.html
@@ -90,15 +90,45 @@
     word-break: break-word;
     background-color: #f5f5f5;
     font-size: 14px;
-    color: SteelBlue;
-    !important;
+    color: SteelBlue;!important;
     ">{{hl7.message}}</pre>
 
 <p>&nbsp;</p>
 
-<button class="btn btn-primary" ng-click="generate()">Generate HL7</button>
-<button class="btn btn-success" ng-click="validate()">Validate HL7</button>
-<button class="btn btn-info" ng-click="hl7Area.$show()" ng-hide="hl7Area.$visible">Edit HL7</button>
+<div class="row">
+    <div class="col-md-6">
+        <button class="btn btn-primary" ng-click="generate()">Generate HL7</button>
+        <button class="btn btn-success" ng-click="validate()">Validate HL7</button>
+        <button class="btn btn-info" ng-click="hl7Area.$show()" ng-hide="hl7Area.$visible">Edit HL7</button>
+
+    </div>
+
+    <div class="col-md-6">
+
+        <div class="checkbox-inline" ng-show="false">
+            <label>
+                <input type="checkbox" name="useTemplate"  ng-click="betaToggle()">
+                Templates (Beta)
+            </label>
+        </div>
+
+        <div class="checkbox-inline" ng-show="beta">
+            <label>
+                <input type="checkbox" name="useTemplate" ng-model="useTemplate">
+                Use MWB Template
+            </label>
+        </div>
+
+        <div class="checkbox-inline" ng-show="beta">
+            <label>
+                <input type="checkbox" name="useExVal" ng-model="useExVal">
+                Strict (Use ExValues)
+            </label>
+        </div>
+    </div>
+
+</div>
+<!--<label class="radio-inline"><input type="radio" value="">Use Template</label>-->
 
 <div>
     <!--<button type="button" ng-click="toggle()" class="btn btn btn-default">+</button>-->
@@ -109,7 +139,7 @@
 </div>
 <!--</p>-->
 <!--<pre ng-show="visible"><h4 ng-style={"color":"green"}>{{response.message}}</h4></pre>-->
-<pre ng-show="visible"><h5 ng-style={width: 100%; height: auto; white-space:pre; word-break:break-word; font-family: Menlo,Monaco,Consolas,'Courier New',monospace}>{{response.message}}</h5></pre>
+<pre ng-show="visible"><div class="ack-area">{{response.message}}</div></pre>
 
 <!--http://eu81273.github.io/angular.panels/-->
 <!--http://blackrockdigital.github.io/startbootstrap-simple-sidebar/-->
