--- a/ez7gen-web/public/views/index.html
+++ b/ez7gen-web/public/views/index.html
@@ -2,7 +2,7 @@
 <html>
 <base>
 <title>Eazy HL7 Generator Tool</title>
-    <base href='/'></base>
+    <base href='/'/>
 <!--     <link rel="stylesheet" type="text/css" href="/css/app.css" media="all" />
  -->
 <!--
