--- a/ez7gen-web/public/templates/generate.html
+++ b/ez7gen-web/public/templates/generate.html
@@ -9,7 +9,8 @@
             <!--<h3>HL7 Version</h3>-->
             <!--<p>Selected: {{event.selected.name}}</p>-->
             <!--<ui-select ng-model="std.selected" theme="select2" ng-disabled="disabled" style="width: 150px;" on-select="setVersions(std.selected)">-->
-            <ui-select ng-model="std.selected" theme="selectize"  on-select="setVersions(std.selected)"  style="color: #555">
+            <!--<ui-select ng-model="std.selected" theme="selectize"  on-select="setVersions(std.selected)"  style="color: #555">-->
+            <ui-select ng-model="std.selected"  on-select="setVersions(std.selected)"  style="color: #555">
                 <ui-select-match placeholder="HL7 Standards">{{$select.selected.std}}</ui-select-match>
                 <ui-select-choices repeat="std in standards | filter: $select.search" refresh="setVersions($select.search)" refresh-delay="0">
                     <span ng-bind-html="std.std | highlight: $select.search"></span>
@@ -18,7 +19,8 @@
         </div>
 
         <div class="col-md-2">
-            <ui-select ng-model="version.selected" theme="selectize"  on-select="setEvents(version.selected)">
+            <!--<ui-select ng-model="version.selected" theme="selectize"  on-select="setEvents(version.selected)">-->
+            <ui-select ng-model="version.selected" on-select="setEvents(version.selected)">
             <ui-select-match placeholder="HL7 Version">{{$select.selected.name}}</ui-select-match>
                 <ui-select-choices repeat="version in versions | filter: $select.search" refresh="setEvents($select.search)" refresh-delay="0">
                     <span ng-bind-html="version.name | highlight: $select.search"></span>
@@ -29,11 +31,12 @@
 
         <div class="col-md-6">
             <ui-select ng-model="event.selected" theme="selectize">
+            <!--<ui-select ng-model="event.selected" on-select="clearEvent($select)">-->
                 <ui-select-match placeholder="HL7 Event">{{$select.selected.name}}</ui-select-match>
                 <ui-select-choices group-by="'group'" group-filter="groupFilterFn" repeat="event in events | filter: $select.search">
                 <!--<ui-select-choices group-by="'group'"  repeat="event in events | filter: $select.search">-->
                     <span ng-bind-html="event.name | highlight: $select.search"></span>
-                    <small ng-bind-html="event.code | highlight: $select.search"></small>
+                    <small ng-bind-html="event.code"></small>
                 </ui-select-choices>
             </ui-select>
 
@@ -41,11 +44,12 @@
 
         <div class="col-md-2" ng-show="subGroupVisible">
         <!--<div class="col-md-2" ng-show="false">-->
-            <ui-select ng-model="subGroup.selected" theme="selectize" on-select="setSubGroup(subGroup.selected)">
+            <!--<ui-select ng-model="subGroup.selected" theme="selectize" on-select="setSubGroup(subGroup.selected)">-->
+            <ui-select ng-model="subGroup.selected" on-select="setSubGroup(subGroup.selected)">
             <ui-select-match placeholder="Event Types">{{$select.selected.name}}</ui-select-match>
                 <ui-select-choices repeat="subGroup in subGroups | filter: $select.search">
                     <span ng-bind-html="subGroup.name | highlight: $select.search"></span>
-                    <small ng-bind-html="subGroup.code | highlight: $select.search"></small>
+                    <small ng-bind-html="subGroup.code"></small>
                 </ui-select-choices>
             </ui-select>
         </div>
