--- a/ez7gen-web/public/templates/generate.html
+++ b/ez7gen-web/public/templates/generate.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-	<p>Demo: HL7 Message Generator Client</p>
+    <p>Demo: HL7 Message Generator Client</p>
 </div>
 
 <div class="form-group">
@@ -10,9 +10,10 @@
             <!--<p>Selected: {{event.selected.name}}</p>-->
             <!--<ui-select ng-model="std.selected" theme="select2" ng-disabled="disabled" style="width: 150px;" on-select="setVersions(std.selected)">-->
             <!--<ui-select ng-model="std.selected" theme="selectize"  on-select="setVersions(std.selected)"  style="color: #555">-->
-            <ui-select ng-model="std.selected"  on-select="setVersions(std.selected)">
+            <ui-select ng-model="std.selected" on-select="setVersions(std.selected)">
                 <ui-select-match placeholder="HL7 Standards">{{$select.selected.std}}</ui-select-match>
-                <ui-select-choices repeat="std in standards | filter: $select.search" refresh="setVersios($select.search)" refresh-delay="0">
+                <ui-select-choices repeat="std in standards | filter: $select.search"
+                                   refresh="setVersios($select.search)" refresh-delay="0">
                     <span ng-bind-html="std.std | highlight: $select.search"></span>
                 </ui-select-choices>
             </ui-select>
@@ -21,8 +22,9 @@
         <div class="col-md-2">
             <!--<ui-select ng-model="version.selected" theme="selectize"  on-select="setEvents(version.selected)">-->
             <ui-select ng-model="version.selected" on-select="setEvents(version.selected)">
-            <ui-select-match placeholder="HL7 Version">{{$select.selected.name}}</ui-select-match>
-                <ui-select-choices repeat="version in versions | filter: $select.search" refresh="setEvents($select.search)" refresh-delay="0">
+                <ui-select-match placeholder="HL7 Version">{{$select.selected.name}}</ui-select-match>
+                <ui-select-choices repeat="version in versions | filter: $select.search"
+                                   refresh="setEvents($select.search)" refresh-delay="0">
                     <span ng-bind-html="version.name | highlight: $select.search"></span>
                     <small ng-bind-html="version.desc | highlight: $select.search"></small>
                 </ui-select-choices>
@@ -32,13 +34,13 @@
         <div class="col-md-6">
             <!--<ui-select ng-model="event.selected" ng-disabled="disabled" on-select="clearEvent($select)">-->
             <!--<ui-select ng-model="event.selected" ng-disabled="disabled">-->
-            <ui-select ng-model="event.selected" on-select="checkForTemplates(event.selected)">
-            <!--<ui-select ng-model="event.selected" on-select="clearEvent($select)">-->
+            <ui-select ng-model="event.selected" on-select="onEventSelect(event.selected)">
+                <!--<ui-select ng-model="event.selected" on-select="clearEvent($select)">-->
                 <!--<ui-select-match allow-clear="true" placeholder="HL7 Event">{{$select.selected.name}}</ui-select-match>-->
                 <ui-select-match placeholder="HL7 Event">{{$select.selected.name}}</ui-select-match>
                 <!--<ui-select-choices group-by="'group'" group-filter="groupFilterFn" repeat="event in events | filter: $select.search | limitTo: ($select.search.length <= 2) ? 0 : undefined">-->
                 <!--<ui-select-choices group-by="'group'" group-filter="groupFilterFn" repeat="event in events | filter: $select.search"> | limitTo: ($select.search.length <= 2) ? 0 : undefined-->
-                <ui-select-choices group-by="'group'"  repeat="event in events | filter: $select.search">
+                <ui-select-choices group-by="'group'" repeat="event in events | filter: $select.search">
                     <span ng-bind-html="event.name | highlight: $select.search"></span>
                     <small ng-bind-html="event.code"></small>
                 </ui-select-choices>
@@ -46,17 +48,27 @@
 
         </div>
 
-        <div class="col-md-2" ng-show="subGroupVisible">
-        <!--<div class="col-md-2" ng-show="false">-->
-            <!--<ui-select ng-model="subGroup.selected" theme="selectize" on-select="setSubGroup(subGroup.selected)">-->
-            <ui-select ng-model="subGroup.selected" on-select="setSubGroup(subGroup.selected)">
-            <ui-select-match placeholder="Event Types">{{$select.selected.name}}</ui-select-match>
-                <ui-select-choices repeat="subGroup in subGroups | filter: $select.search ">
-                    <span ng-bind-html="subGroup.name | highlight: $select.search"></span>
-                    <small ng-bind-html="subGroup.code"></small>
-                </ui-select-choices>
-            </ui-select>
-        </div>
+        <!--<div class="col-md-2" ng-show="subGroupVisible">-->
+        <!--&lt;!&ndash;<div class="col-md-2" ng-show="false">&ndash;&gt;-->
+        <!--&lt;!&ndash;<ui-select ng-model="subGroup.selected" theme="selectize" on-select="setSubGroup(subGroup.selected)">&ndash;&gt;-->
+        <!--<ui-select ng-model="subGroup.selected" on-select="setSubGroup(subGroup.selected)">-->
+        <!--<ui-select-match placeholder="Event Types">{{$select.selected.name}}</ui-select-match>-->
+        <!--<ui-select-choices repeat="subGroup in subGroups | filter: $select.search ">-->
+        <!--<span ng-bind-html="subGroup.name | highlight: $select.search"></span>-->
+        <!--<small ng-bind-html="subGroup.code"></small>-->
+        <!--</ui-select-choices>-->
+        <!--</ui-select>-->
+        <!--</div>-->
+        <!--<div class="col-md-2" ng-show="hasTemplates">-->
+        <!--&lt;!&ndash;<div class="col-md-2" ng-show="false">&ndash;&gt;-->
+        <!--&lt;!&ndash;<ui-select ng-model="subGroup.selected" theme="selectize" on-select="setSubGroup(subGroup.selected)">&ndash;&gt;-->
+        <!--<ui-select ng-model="template.selected">-->
+        <!--<ui-select-match placeholder="Event Templates">{{$select.selected.desc}}</ui-select-match>-->
+        <!--<ui-select-choices repeat="tmp in event.selected.templates | filter: $select.search ">-->
+        <!--<span ng-bind-html="tmp.desc | highlight: $select.search"></span>-->
+        <!--</ui-select-choices>-->
+        <!--</ui-select>-->
+        <!--</div>-->
 
     </div>
 
@@ -64,8 +76,71 @@
 
 
 <h4>
-	<i>Version</i>: {{version.selected.name}} <i>Message</i> : {{event.selected.name}}
+    <div class="row">
+        <div class="col-md-12">
+            <p><i>Version</i>: {{version.selected.name}} <i>Message</i> : {{event.selected.name}} </p>
+        </div>
+    </div>
+
+
+    <!--<div class="col-md-6" ng-show="hasTemplates">-->
+
+    <!--<div class="checkbox-inline">-->
+    <!--<label>-->
+    <!--<input type="checkbox" name="useTemplate"  ng-click="betaToggle()">-->
+    <!--Templates (Beta)-->
+    <!--</label>-->
+    <!--</div>-->
+
+    <!--<div class="checkbox-inline" ng-show="showUseExVal">-->
+    <!--<label>-->
+    <!--<input type="checkbox" name="useTemplate" ng-model="useTemplate">-->
+    <!--Use MWB Template-->
+    <!--</label>-->
+    <!--</div>-->
+
+    <!--<div class="checkbox-inline" ng-show="showUseExVal">-->
+    <!--<label>-->
+    <!--<input type="checkbox" name="useExVal" ng-model="useExVal">-->
+    <!--Strict (Use ExValues)-->
+    <!--</label>-->
+    <!--</div>-->
+    <!--</div>-->
+
 </h4>
+<div class="form-group" ng-show="hasTemplates">
+    <div class="row">
+        <!--<div class="well" style ="background:whitesmoke; width: 82%" ng-show="hasTemplates">-->
+        <div class="col-md-10 well">
+            <div class="row">
+                <div class="col-md-2">
+                    <!--<i>Template</i> : {{template.selected.desc || "Not Selected"}}-->
+                    <h4 style="text-align: right"><i>Template:</i></h4>
+                </div>
+                <!--<div class="col-md-2" ng-show="false">-->
+                <!--<ui-select ng-model="subGroup.selected" theme="selectize" on-select="setSubGroup(subGroup.selected)">-->
+                <!--<div class="col-md-7 col-mid-offset-1">-->
+                <div class="col-md-7">
+                    <ui-select ng-model="template.selected" on-select="onTemplateSelected()">
+                        <ui-select-match placeholder="Select Template">{{$select.selected.desc}}</ui-select-match>
+                        <ui-select-choices repeat="tmp in event.selected.templates | filter: $select.search ">
+                            <span ng-bind-html="tmp.desc | highlight: $select.search"></span>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="checkbox" ng-show="showUseExVal">
+                        <label>
+                            <input type="checkbox" name="useExVal" ng-model="useExVal">
+                            Strict (Use ExValues)
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <!--background-image: url(data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOMivJRBgADOwElVN79SQAAAABJRU5ErkJggg==);-->
 <!--dynamic hight: http://stackoverflow.com/questions/17772260/textarea-auto-height-->
 <!--<pre  editable-textarea="hl7.message" e-form="hl7Area" e-style="width: 1000px; height: 400px; white-space: pre; word-break:break-word;-->
@@ -75,20 +150,20 @@
 <!--color: SteelBlue;-->
 <!--!important;">{{hl7.message}}</pre>-->
 <!--<style type="text/css">-->
-    <!--editable-textarea {-->
-    <!--width: 1000px;-->
-    <!--height: 400px;-->
-    <!--white-space: nowrap;-->
-    <!--overflow:auto;-->
-    <!--white-space: pre;-->
-    <!--word-break: break-word;-->
-    <!--background-color: #f5f5f5;-->
-    <!--font-size: 13px;-->
-    <!--color: SteelBlue;-->
-    <!--!important;-->
-    <!--}-->
+<!--editable-textarea {-->
+<!--width: 1000px;-->
+<!--height: 400px;-->
+<!--white-space: nowrap;-->
+<!--overflow:auto;-->
+<!--white-space: pre;-->
+<!--word-break: break-word;-->
+<!--background-color: #f5f5f5;-->
+<!--font-size: 13px;-->
+<!--color: SteelBlue;-->
+<!--!important;-->
+<!--}-->
 <!--</style>-->
-<pre  editable-textarea="hl7.message" e-form="hl7Area" e-style="
+<pre editable-textarea="hl7.message" e-form="hl7Area" e-style="
     width: 1000px;
     height: 400px;
     white-space: nowrap
@@ -108,46 +183,23 @@
         <button class="btn btn-primary" ng-click="generate()">Generate HL7</button>
         <button class="btn btn-success" ng-click="validate()">Validate HL7</button>
         <button class="btn btn-info" ng-click="hl7Area.$show()" ng-hide="hl7Area.$visible">Edit HL7</button>
-
     </div>
-
-    <div class="col-md-6" ng-show="hasTemplates">
-
-        <div class="checkbox-inline">
-            <label>
-                <input type="checkbox" name="useTemplate"  ng-click="betaToggle()">
-                Templates (Beta)
-            </label>
-        </div>
-
-        <div class="checkbox-inline" ng-show="beta">
-            <label>
-                <input type="checkbox" name="useTemplate" ng-model="useTemplate">
-                Use MWB Template
-            </label>
-        </div>
-
-        <div class="checkbox-inline" ng-show="beta">
-            <label>
-                <input type="checkbox" name="useExVal" ng-model="useExVal">
-                Strict (Use ExValues)
-            </label>
-        </div>
-    </div>
-
 </div>
+
 <!--<label class="radio-inline"><input type="radio" value="">Use Template</label>-->
 
 <div>
     <!--<button type="button" ng-click="toggle()" class="btn btn btn-default">+</button>-->
-    <button type="button"  ng-click="toggle()" class="btn default">
+    <button type="button" ng-click="toggle()" class="btn default">
         <!--<span class="glyphicon glyphicon-plus"></span>-->
         <span>ACK Response</span>
     </button>
 </div>
 <!--</p>-->
 <!--<pre ng-show="visible"><h4 ng-style={"color":"green"}>{{response.message}}</h4></pre>-->
-<pre ng-show="visible"><div class="ack-area">{{response.message}}</div></pre>
+<div ng-show="visible">
+    <pre><div class="ack-area">{{response.message}}</div></pre>
+</div>
 
 <!--http://eu81273.github.io/angular.panels/-->
 <!--http://blackrockdigital.github.io/startbootstrap-simple-sidebar/-->
