--- a/ez7gen-web/public/views/index.html
+++ b/ez7gen-web/public/views/index.html
@@ -45,17 +45,22 @@
 <!--Selectize theme-->
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
 <!-- Select2 theme -->
-<!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">-->
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
 
-<!--<style>-->
-	<!--body {-->
-		<!--padding: 25px;-->
-	<!--}-->
+<style>
+	body {
+		padding: 15px;
+	}
 
-	<!--.selectize-control > .selectize-dropdown {-->
-		<!--top: 36px;-->
-	<!--}-->
-<!--</style>-->
+	/*.select2 > .select2-choice.ui-select-match {*/
+		/*!* Because of the inclusion of Bootstrap *!*/
+		/*height: 29px;*/
+	/*}*/
+
+	.selectize-control > .selectize-dropdown {
+		top: 36px;
+	}
+</style>
 
 <!-- xeditable-->
 <script src="vendor/js/xeditable.js"></script>
