--- a/ez7gen-web/public/views/index.html
+++ b/ez7gen-web/public/views/index.html
@@ -3,8 +3,7 @@
 <base>
 <title>Eazy HL7 Generator Tool</title>
     <base href='/'/>
-<!--     <link rel="stylesheet" type="text/css" href="/css/app.css" media="all" />
- -->
+<!--     <link rel="stylesheet" type="text/css" href="/css/app.css" media="all" /> -->
 <!--
 	IE8 support, see AngularJS Internet Explorer Compatibility http://docs.angularjs.org/guide/ie
 	For Firefox 3.6, you will also need to include jQuery and ECMAScript 5 shim
