Fix for subgroups of segments in templates, handle reset on select boxes, cleanup,

--- a/ez7gen-web/public/views/index.html
+++ b/ez7gen-web/public/views/index.html
@@ -44,7 +44,7 @@
 <!--Selectize theme-->
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
 <!-- Select2 theme -->
-<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
+<!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">-->
 
 <style>
 	body {
